Fixed actions/:type pages not showing actions bug

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
 .box {
-	background: linear-gradient(-45deg, #ffe, #eef);
+	background: linear-gradient(-45deg, #A68, #68A);
+	color: white;
 	padding: 0.75em;
 	border-radius: 0.5em;
 	border: 1px solid #ddd;
@@ -23,21 +24,39 @@
 }
 
 button {
-	background: linear-gradient(45deg, #3FF, #3CF) !important;
+	background: linear-gradient(45deg, #3FF, #3AF);
 	color: black !important;
 }
 
+button:hover {
+	background: #3CF !important;
+}
+
 a {
+	color: white;
+	outline: 1px solid #3CF;
+	border-radius: 0.25rem;
 	text-decoration: none;
 	padding: 0.75rem 0.75rem 0.25rem 0.5rem;
 }
 
 a:hover {
+	background: linear-gradient(45deg, #3FF, #3AF);
 	color: black;
-	outline: 1px solid #33C3F0;
-	border-radius: 0.25rem;
 }
 
 .hidden {
 	display: none;
+}
+
+h1,
+h2,
+h3 {
+	text-shadow: 2px 2px 2px black;
+}
+
+h4,
+h5,
+h6 {
+	text-shadow: 1px 1px 1px black;
 }
